Fixing spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -38,7 +38,7 @@ body {
 
 .column a {
   font-size: 3.5em;
-  padding: 5px 20px;
+  padding: 10px 50px;
   color: #FFFFFF;
   text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
   }
